--- a/main.html
+++ b/main.html
@@ -8,15 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-
-		<!-- the entire body must be written by student -->
+	
 	<nav>
 		<ul>
 			 <li><a href="#home">Home</a></li>
             <li><a href="#news">About us</a></li>
             <li><a href="#contact">Contact us</a></li>
 		</ul>
-		<h1>3 random images</h1>
+		<h1>3 random videos </h1>
 		<img src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt = "Home"> 
 		 <img src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" alt = "Home"> 
 		<img src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" alt = "Home">
