--- a/main.html
+++ b/main.html
@@ -16,9 +16,20 @@
             <li><a href="#contact">Contact us</a></li>
 		</ul>
 		<h1>3 random videos </h1>
-		<img src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt = "Home"> 
-		 <img src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" alt = "Home"> 
-		<img src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" alt = "Home">
+		<video width="320" height="240" controls>
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video> 
+		
+<video width="320" height="240" controls>
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video> 
+		
+<video width="320" height="240" controls>
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video> 
 	</nav>
 	
     <script type="text/javascript" src="./script.js">
